# mlops_practice

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTES.md  README.md  docker-compose.yaml  genindex.html  index.html  mlops-dvcreader.json  mlops_practice.config.html  mlops_practice.dataset.html  mlops_practice.html  mlops_practice.nets.html  mlops_practice.trainer.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  mlops_practice.config.doctree  mlops_practice.dataset.doctree  mlops_practice.doctree  mlops_practice.nets.doctree  mlops_practice.trainer.doctree  modules.doctree
.dvc/: config
.github/workflows/: autodoc.yml  pre-commit.yml
_sources/: mlops_practice.config.rst.txt  mlops_practice.dataset.rst.txt  mlops_practice.nets.rst.txt  mlops_practice.rst.txt  mlops_practice.trainer.rst.txt  modules.rst.txt
conf/: config.yaml
data/: .gitignore  fashion_mnist.dvc
docs/: conf.py  index.rst
mlops_practice/: commands.py  git_utils.py  infer.py  main.py  train.py
mlops_practice/config/: __init__.py
mlops_practice/dataset/: __init__.py
mlops_practice/nets/: __init__.py
mlops_practice/trainer/: __init__.py
