[tool.poetry]
name = "mlops-practice"
version = "0.1.0"
description = ""
authors = ["roma1n <golubtsowroman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
scikit-learn = "1.3.1"
torch = "2.0.1"
matplotlib = "3.8.0"
seaborn = "0.12.2"
uniplot = "0.10.2"
pre-commit = "3.4.0"
pandas = "2.1.1"
numpy = "1.25.2"
fire = "^0.5.0"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.1.0"
tensorboardx = "^2.6.2.2"
tensorflow-tensorboard = "^1.5.1"
tensorflow = "^2.14.0"

[tool.poetry.scripts]
mlops = "mlops_practice.commands:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
src_paths = ["mlops_practice"]
profile = "black"
line_length = 100
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
