[tool.poetry]
name = "mlops-practice"
version = "0.1.0"
description = ""
authors = ["roma1n <golubtsowroman@gmail.com>"]
readme = "README.md"

[tool.poetry.group.torch_cpu]
optional = true

[tool.poetry.group.torch_cpu.dependencies]
torch = { url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl#sha256=b0bb23f28e5fc8fee76b8547c9ec0ecff9476da32225c7734090b658fbbc3d38" }

[tool.poetry.group.torch_cuda]
optional = true

[tool.poetry.group.torch_cuda.dependencies]
torch = { version = "2.0.1"}
sympy = "1.12"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "1.3.1"
matplotlib = "3.8.0"
seaborn = "0.12.2"
uniplot = "0.10.2"
pre-commit = "3.4.0"
pandas = "2.1.1"
numpy = "1.26.0"
fire = "^0.5.0"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.1.0"

[tool.poetry.scripts]
mlops = "mlops_practice.commands:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
src_paths = ["mlops_practice"]
profile = "black"
line_length = 100
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
