[tool.poetry]
name = "mlops-practice"
version = "0.1.0"
description = ""
authors = ["roma1n <golubtsowroman@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "1.3.1"
matplotlib = "3.8.0"
seaborn = "0.12.2"
uniplot = "0.10.2"
pre-commit = "3.4.0"
pandas = "2.0.3"
numpy = "1.25.0"
fire = "^0.5.0"
hydra-core = "^1.3.2"
sympy = "1.12"
pytorch-lightning = "^2.1.0"
mlflow = "^2.8.0"
torch = {version = "2.0.1", source = "torch_cpu"}
gitpython = "^3.1.40"

[tool.poetry.scripts]
mlops = "mlops_practice.commands:main"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
src_paths = ["mlops_practice"]
profile = "black"
line_length = 100
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
